--- a/editor.html
+++ b/editor.html
@@ -119,9 +119,7 @@
     function createBlock() {
         const blockList = document.getElementById('blockList');
         const blockStructureTextarea = document.getElementById('blockStructure');
-        const blockCodeTextarea = document.getElementById('blockCode');
         const blockStructure = blockStructureTextarea.value;
-        const blockCode = blockCodeTextarea.value;
 
         if (!blockStructure.trim()) {
             alert('Bitte geben Sie die Blockstruktur ein.');
@@ -131,53 +129,30 @@
         const block = document.createElement('div');
         block.className = 'block';
 
-        if (blockStructure.includes("{...}")) {
-            block.classList.add("if-block");
-            block.draggable = true;
+        const parts = blockStructure.split(/({...}|...|\[.*?\])/);
 
-            const ifTop = document.createElement('div');
-            ifTop.className = "if-top";
-            ifTop.innerHTML = `If (<span class="editable-content" data-editable-type="condition">condition</span>) {`;
-            block.appendChild(ifTop);
+        parts.forEach((part) => {
+            const blockPart = document.createElement('div');
+            blockPart.className = 'block-part';
 
-            const ifContent = document.createElement('div');
-            ifContent.className = "if-content";
-            block.appendChild(ifContent);
+            if (part === "{...}") {
+                blockPart.textContent = "...";
+                blockPart.contentEditable = true;
+            } else if (part.startsWith("[") && part.endsWith("]")) {
+                const editable = document.createElement('span');
+                editable.className = 'editable';
+                editable.textContent = part.slice(1, -1);
+                editable.contentEditable = true;
+                blockPart.appendChild(editable);
+            } else {
+                blockPart.appendChild(document.createTextNode(part));
+            }
 
-            const ifBottom = document.createElement('div');
-            ifBottom.className = "if-bottom";
-            ifBottom.textContent = "}";
-            block.appendChild(ifBottom);
-
-        } else {
-            // Implementierung für normale Blöcke (ohne "{...}")
-            const parts = blockStructure.split(/\[(.*?)\]/);
-
-            parts.forEach((part, index) => {
-                const blockPart = document.createElement('div');
-                blockPart.className = 'block-part';
-
-                if (index % 2 === 0) {
-                    blockPart.appendChild(document.createTextNode(part));
-                } else {
-                    const editable = document.createElement('span');
-                    editable.className = 'editable';
-                    editable.textContent = part;
-                    editable.contentEditable = true;
-                    blockPart.appendChild(editable);
-                }
-                block.appendChild(blockPart);
-            });
-        }
-
-        const blockCodeElement = document.createElement('div');
-        blockCodeElement.className = 'block-code';
-        blockCodeElement.textContent = blockCode || 'Hier kommt dein Code hin!';
-        block.appendChild(blockCodeElement);
+            block.appendChild(blockPart);
+        });
 
         blockList.appendChild(block);
         blockStructureTextarea.value = '';
-        blockCodeTextarea.value = '';
     }
 
     function exportBlocks() {
@@ -195,8 +170,7 @@
                 });
                 structure.push(text);
             });
-            const blockCode = blockElement.querySelector('.block-code').textContent;
-            blocks.push({structure: structure.join(' '), code: blockCode});
+            blocks.push({structure: structure.join(' ')});
         });
 
         document.getElementById('exportOutput').textContent = JSON.stringify(blocks, null, 2);
