--- a/lcord.html
+++ b/lcord.html
@@ -319,7 +319,7 @@ function importBlocks(jsonData) {
     updateCodePane(); // Aktualisiert den Code-Abschnitt
 }
 
-        const importedJson = '[
+        const importedJson = `[
   {
     "structure": [
       {
@@ -351,7 +351,8 @@ function importBlocks(jsonData) {
     ],
     "code": ""
   }
-]';  // Ersetzen Sie dies durch Ihren importierten JSON-String
+]`;
+
 importBlocks(importedJson);
     </script>
 </body>
