--- a/edi.html
+++ b/edi.html
@@ -136,6 +136,7 @@
 
 .drop-space {
     min-height: 100px;
+    min-witdh: 200px;
     border: 2px dashed #444;
     border-radius: 5px;
     padding: 10px;
