--- a/edi.html
+++ b/edi.html
@@ -137,6 +137,7 @@
 .drop-space {
     min-height: 100px;
     min-witdh: 200px;
+    width: 100%;
     border: 2px dashed #444;
     border-radius: 5px;
     padding: 10px;
