--- a/edi.html
+++ b/edi.html
@@ -99,6 +99,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            display: block;
         }
 
         .code-pane {
