--- a/edi.html
+++ b/edi.html
@@ -92,17 +92,17 @@
             display: inline-block;
         }
 
-       .drop-area {
-    width: 100%; /* Änderung hier */
-    height: 60px;
-    background-color: #181818;
-    margin: 0 5px;
-    border: 2px dashed #444;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+        .drop-area {
+            width: 100px;
+            height: 60px;
+            background-color: #181818;
+            margin: 0 5px;
+            border: 2px dashed #444;
+            border-radius: 5px;
+            align-items: center;
+            justify-content: center;
+            display: block;
+        }
 
 
         .code-pane {
