--- a/ghxuly.html
+++ b/ghxuly.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Schmock</title>
+  <title>GHXULY</title>
   <link rel="icon" href="https://media.discordapp.net/attachments/916425334021296139/1112383557457944646/Picsart_23-05-28_16-14-53-744.png?width=453&height=452" type="image/x-icon">
 
   <style>
